overflow fix through css

--- a/style.css
+++ b/style.css
@@ -44,10 +44,8 @@ body{
     color: rgba(255, 255, 255,0.3);
     font-size: larger;
     display: flex;
+    flex-wrap: wrap;
 }
-/* .paragraph{
-    display: flex;
-} */
 .mistake, .timer{
     color: #e2b714;
     font-size: large;
@@ -68,4 +66,11 @@ body{
 }
 .restart a:hover i{
     color: white;
+}
+.words{
+    /* background-color: #fff; */
+    margin-left: 8px;
+    margin-bottom: 2px;
+    font-weight: normal;
+    letter-spacing: 0;
 }
